--- a/charts/thanos/Chart.yaml
+++ b/charts/thanos/Chart.yaml
@@ -4,5 +4,5 @@ name: "thanos"
 version: "0"
 dependencies:
   - name: "thanos"
-    version: "3.14.0"
+    version: "^3"
     repository: "https://charts.bitnami.com/bitnami"
