fix(workflow): use \n and add test changes

--- a/.github/workflows/generate_terraform_docs.yaml
+++ b/.github/workflows/generate_terraform_docs.yaml
@@ -21,10 +21,7 @@ jobs:
       with:
         working-dir: ./eks
         indention: 4
-        template: |-
-          <!-- BEGIN_TF_DOCS_EKS -->
-          {{ .Content }}
-          <!-- END_TF_DOCS_EKS -->
+        template: <!-- BEGIN_TF_DOCS_EKS -->\n{{ .Content }}\n<!-- END_TF_DOCS_EKS -->
         output-format: "markdown document"
         output-file: ../README.md
         output-method: inject
