--- a/.github/workflows/generate_terraform_docs.yaml
+++ b/.github/workflows/generate_terraform_docs.yaml
@@ -34,7 +34,7 @@ jobs:
         indention: 3
         output-format: "markdown document"
         output-file: ../README.md
-        output-method: inject<!-- BEGIN_TF_DOCS_EKS -->\n{{ .Content }}\n<!-- END_TF_DOCS_EKS -->
-        template: 
+        output-method: inject
+        template: <!-- BEGIN_TF_DOCS_EKS -->\n{{ .Content }}\n<!-- END_TF_DOCS_EKS -->
         git-push: "true"
         git-commit-message: "terraform-docs: generate docs and append to README.md"
