feat: move eks into modules folder to facilitate docs generation

--- a/.github/workflows/generate_terraform_docs.yaml
+++ b/.github/workflows/generate_terraform_docs.yaml
@@ -19,22 +19,10 @@ jobs:
       uses: terraform-docs/gh-actions@v1.0.0
       with:
         working-dir: .
-        # recursive: "true"
+        recursive: "true"
         indention: 3
         output-format: "markdown document"
         output-file: README.md
         output-method: inject
-        git-push: "true"
-        git-commit-message: "terraform-docs: generate docs and append to README.md"
-
-    - name: Render Terraform documentation inside the README.md for the EKS module push changes back to PR branch
-      uses: terraform-docs/gh-actions@v1.0.0
-      with:
-        working-dir: eks
-        indention: 3
-        output-format: "markdown document"
-        output-file: ../README.md
-        output-method: inject
-        template: <!-- BEGIN_TF_DOCS_EKS -->\n{{ .Content }}\n<!-- END_TF_DOCS_EKS -->
         git-push: "true"
         git-commit-message: "terraform-docs: generate docs and append to README.md"
