ci: add ci with table support and variable for working directory

--- a/.github/workflows/terraform_docs.yaml
+++ b/.github/workflows/terraform_docs.yaml
@@ -1,29 +1,46 @@
 ---
 # GitHub Actions workflow to automatically generate documentation from the .tf files of the module
-# The generated documentation will be injected between <!-- BEGIN_TF_DOCS --> and <!-- END_TF_DOCS --> on the README.md
+# The generated documentation will be injected between AsciiDoc comments on the README.adoc
 
-name: Generate Terraform documentation
+name: "Generate Terraform documentation"
 
 on:
   - pull_request
+
+env:
+  TF_DOCS_WORKING_DIR: ".,eks" # Define the folders of the main module and submodules
 
 jobs:
   terraform-docs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout the repository
+    - name: "Check out the repository"
       uses: actions/checkout@v3
       with:
         ref: ${{ github.event.pull_request.head.ref }}
 
-    - name: Render Terraform documentation inside the README.md and push changes back to PR branch
+    - name: "Generate Terraform docs inside the README.adoc and push changes back to PR branch"
       uses: terraform-docs/gh-actions@v1.0.0
       with:
-        working-dir: .
+        working-dir: ${{ env.TF_DOCS_WORKING_DIR }}
         indention: 3
-        output-format: "markdown document"
-        output-file: README.md
+        output-format: asciidoc document
+        output-file: README.adoc
         output-method: inject
-        git-push: "true"
+        template: "// BEGIN_TF_DOCS\n{{ .Content }}\n// END_TF_DOCS" # Define template compatible with AsciiDoc
+        git-push: true
         git-commit-message: "docs(terraform-docs): generate docs and write to README.adoc"
+
+    - name: Generate Terraform tables inside the README.adoc and push changes back to PR branch
+      uses: terraform-docs/gh-actions@v1.0.0
+      with:
+        working-dir: ${{ env.TF_DOCS_WORKING_DIR }}
+        indention: 1 # Since the headings are not read inside the collapsible block we can indent as 1 instead of aligning with the rest of the text
+        output-format: asciidoc table
+        output-file: README.adoc
+        output-method: inject
+        template: "// BEGIN_TF_TABLES\n{{ .Content }}\n// END_TF_TABLES" # Define template compatible with AsciiDoc
+        args: "--hide-empty=true" # Do not show empty sections
+        git-push: true
+        git-commit-message: "docs(terraform-docs): generate tables and write to README.adoc"
