--- a/.github/workflows/terraform_docs.yaml
+++ b/.github/workflows/terraform_docs.yaml
@@ -1,6 +1,6 @@
 ---
-# GitHub Actions workflow to automatically generate documentation from the .tf files of the module
-# The generated documentation will be injected between AsciiDoc comments on the README.adoc
+# GitHub Actions workflow to automatically generate documentation from the .tf files of the module.
+# The generated documentation will be injected between AsciiDoc comments on the README.adoc.
 
 name: "Generate Terraform documentation"
 
@@ -8,7 +8,7 @@ on:
   - pull_request
 
 env:
-  TF_DOCS_WORKING_DIR: ".,./eks" # Define the folders of the main module and submodules
+  SUBMODULES_DIR: "eks" # Define the folders of the submodules
 
 jobs:
   terraform-docs:
@@ -20,27 +20,54 @@ jobs:
       with:
         ref: ${{ github.event.pull_request.head.ref }}
 
-    - name: "Generate Terraform docs inside the README.adoc and push changes back to PR branch"
+    - name: "Generate Terraform docs"
       uses: terraform-docs/gh-actions@v1.0.0
       with:
-        working-dir: ${{ env.TF_DOCS_WORKING_DIR }}
+        working-dir: .
         indention: 3
         output-format: asciidoc document
         output-file: README.adoc
         output-method: inject
         template: "// BEGIN_TF_DOCS\n{{ .Content }}\n// END_TF_DOCS" # Define template compatible with AsciiDoc
-        git-push: true
-        git-commit-message: "docs(terraform-docs): generate docs and write to README.adoc"
+        git-push: false
 
-    - name: Generate Terraform tables inside the README.adoc and push changes back to PR branch
+    - name: "Generate Terraform tables"
       uses: terraform-docs/gh-actions@v1.0.0
       with:
-        working-dir: ${{ env.TF_DOCS_WORKING_DIR }}
+        working-dir: .
         indention: 1 # Since the headings are not read inside the collapsible block we can indent as 1 instead of aligning with the rest of the text
         output-format: asciidoc table
         output-file: README.adoc
         output-method: inject
         template: "// BEGIN_TF_TABLES\n{{ .Content }}\n// END_TF_TABLES" # Define template compatible with AsciiDoc
         args: "--hide-empty=true" # Do not show empty sections
-        git-push: true
-        git-commit-message: "docs(terraform-docs): generate tables and write to README.adoc"
+        git-push: false
+
+    - name: "Generate Terraform docs for the submodules"
+      uses: terraform-docs/gh-actions@v1.0.0
+      with:
+        working-dir: ${{ env.SUBMODULES_DIR }}
+        indention: 3
+        output-format: asciidoc document
+        output-file: README.adoc
+        output-method: inject
+        template: "// BEGIN_TF_DOCS\n{{ .Content }}\n// END_TF_DOCS" # Define template compatible with AsciiDoc
+        git-push: false
+
+    - name: "Generate Terraform tables for the submodules"
+      uses: terraform-docs/gh-actions@v1.0.0
+      with:
+        working-dir: ${{ env.SUBMODULES_DIR }}
+        indention: 1 # Since the headings are not read inside the collapsible block we can indent as 1 instead of aligning with the rest of the text
+        output-format: asciidoc table
+        output-file: README.adoc
+        output-method: inject
+        template: "// BEGIN_TF_TABLES\n{{ .Content }}\n// END_TF_TABLES" # Define template compatible with AsciiDoc
+        args: "--hide-empty=true" # Do not show empty sections
+        git-push: false
+
+    # This step avoids a commit for each previous step and instead commits everything on a single commit
+    - name: "Commit changes done in the previous steps"
+      uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_message: "docs(terraform-docs): generate docs and write to README.adoc"
