--- a/.github/workflows/terraform-docs.yaml
+++ b/.github/workflows/terraform-docs.yaml
@@ -7,5 +7,5 @@ on:
 jobs:
   terraform-docs:
     uses: camptocamp/devops-stack/.github/workflows/modules-terraform-docs.yaml@v1-central-workflows
-      # with:
-      #   variants: ".,eks"
+      with:
+        variants: "eks"
