--- a/.github/workflows/terraform-docs.yaml
+++ b/.github/workflows/terraform-docs.yaml
@@ -6,6 +6,6 @@ on:
 
 jobs:
   terraform-docs:
-    uses: camptocamp/devops-stack/.github/workflows/modules-terraform-docs.yaml@v1-central-workflows # TODO Remove ref when called modules are merged to main
+    uses: camptocamp/devops-stack/.github/workflows/modules-terraform-docs.yaml
     with:
       variants: "eks"
