--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -8,4 +8,4 @@ on:
 
 jobs:
   release:
-    uses: camptocamp/devops-stack/.github/workflows/modules-release-please.yaml@v1-central-workflows # TODO Remove ref when called modules are merged to main
+    uses: camptocamp/devops-stack/.github/workflows/modules-release-please.yaml
