--- a/.github/workflows/terraform-docs.yaml
+++ b/.github/workflows/terraform-docs.yaml
@@ -6,6 +6,6 @@ on:
 
 jobs:
   terraform-docs:
-    uses: camptocamp/devops-stack/.github/workflows/modules-terraform-docs.yaml
+    uses: camptocamp/devops-stack/.github/workflows/modules-terraform-docs.yaml@master
     with:
       variants: "eks"
