--- a/.github/workflows/terraform-docs.yaml
+++ b/.github/workflows/terraform-docs.yaml
@@ -8,4 +8,4 @@ jobs:
   terraform-docs:
     uses: camptocamp/devops-stack/.github/workflows/modules-terraform-docs.yaml@master
     with:
-      variants: "eks"
+      variants: "aks,eks,kind"
