--- a/charts/thanos/Chart.yaml
+++ b/charts/thanos/Chart.yaml
@@ -4,5 +4,5 @@ name: "thanos"
 version: "0"
 dependencies:
   - name: "thanos"
-    version: "^12"
+    version: "12.6.3"
     repository: "https://charts.bitnami.com/bitnami"
