--- a/charts/thanos/Chart.yaml
+++ b/charts/thanos/Chart.yaml
@@ -3,5 +3,8 @@ dependencies:
 - name: thanos
   repository: https://charts.bitnami.com/bitnami
   version: 12.13.13
+- name: "redis"
+  version: "18.4.0"
+  repository: "https://charts.bitnami.com/bitnami"
 name: thanos
 version: "0"
