--- a/charts/thanos/templates/compactor-dashboard.yaml
+++ b/charts/thanos/templates/compactor-dashboard.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   labels:
     grafana_dashboard: "1"
-  name: grafana-dashboard
+  name: thanos-compactor-dashboard
 data:
   thanos-compactor.json: |-
     {
