--- a/charts/thanos/templates/store-dashboard.yaml
+++ b/charts/thanos/templates/store-dashboard.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   labels:
     grafana_dashboard: "1"
-  name: grafana-dashboard
+  name: thanos-store-dashboard
 data:
   thanos-store.json: |-
     {
